<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/txv_current_photo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/translucent_white"
        android:padding="5dp"
        android:textColor="@color/accent"
        android:textSize="18sp"
        android:visibility="gone"
        tools:text="Testing"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_take_photo"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">


<!--        <ImageButton-->
<!--            android:id="@+id/switch_camera"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:background="@null"-->
<!--            android:layout_marginLeft="25dp"-->
<!--            android:contentDescription="@string/switch_camera"-->
<!--            android:onClick="clickedSwitchCamera"-->
<!--            android:padding="10dp"-->
<!--            android:scaleType="fitCenter"-->
<!--            android:src="@drawable/switch_camera"-->
<!--            android:visibility="gone"-->
<!--            />-->

        <ImageButton
            android:id="@+id/take_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/take_photo"
            android:onClick="clickedTakePhoto"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/take_photo_selector"/>

        <ScrollView
            android:id="@+id/hide_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <SeekBar
        android:id="@+id/focus_seekbar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/focus_distance"
        android:visibility="gone"/>

    <Button
        android:id="@+id/gui_anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="1dp"
        android:scaleType="fitCenter"/>

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/action_settings"
        android:onClick="clickedSettings"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/settings"/>

    <ImageButton
        android:id="@+id/gallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/gallery"
        android:onClick="clickedGallery"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/gallery"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/popup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/action_popup"
        android:onClick="clickedPopupSettings"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/popup"/>

    <ImageButton
        android:id="@+id/exposure_lock"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/exposure_lock"
        android:onClick="clickedExposureLock"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/exposure"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/exposure"
        android:onClick="clickedExposure"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/exposure"
        android:visibility="gone"/>

<!--    <SeekBar-->
<!--        android:id="@+id/exposure_seekbar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:contentDescription="@string/exposure_compensation"-->
<!--        android:visibility="gone"/>-->

<!--    <ZoomControls-->
<!--        android:id="@+id/exposure_seekbar_zoom"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:contentDescription="@string/exposure_compensation"-->
<!--        android:visibility="gone" />-->

<!--    <SeekBar-->
<!--        android:id="@+id/iso_seekbar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:contentDescription="@string/iso"-->
<!--        android:visibility="gone" />-->

<!--    <SeekBar-->
<!--        android:id="@+id/exposure_time_seekbar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:contentDescription="@string/exposure"-->
<!--        android:visibility="gone" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/switch_video"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:contentDescription="@string/switch_video"-->
<!--        android:onClick="clickedSwitchVideo"-->
<!--        android:padding="10dp"-->
<!--        android:scaleType="fitCenter"-->
<!--        android:src="@drawable/switch_video"-->
<!--        />-->
    <FrameLayout
        android:id="@+id/prefs_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/locker"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:id="@+id/popup_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:layout_toStartOf="@+id/settings"/>

<!--    <FrameLayout-->
<!--        android:id="@+id/container_photo_template_list"-->
<!--        android:layout_width="@dimen/width_photo_template_list"-->
<!--        android:layout_height="match_parent"-->
<!--        android:visibility="gone"-->
<!--        tools:layout="@layout/fragment_photo_template"/>-->

<!--    <ImageButton-->
<!--        android:id="@+id/btn_template_list_toggle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:layout_toEndOf="@id/container_photo_template_list"-->
<!--        android:onClick="toggleTemplateListVisibility"-->
<!--        android:src="@android:drawable/ic_media_play"-->
<!--        android:visibility="gone"-->
<!--        tools:ignore="ContentDescription"/>-->

</RelativeLayout>
